# tcc-pos

./: .~lock.TCC.docx#  README.md  TCC.docx  artigos.md  ideias.md  pyproject.toml
material_de_apoio/: .~lock.modelo-de-artigo-cientifico.docx#  modelo-de-artigo-cientifico.docx  modelo-de-monografia.docx
