[tool.poetry]
name = "tcc-pos"
version = "0.1.0"
description = ""
authors = ["Felipe Mendonça <97059009+felipeadsm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tcc_pos"}]

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.0.121"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
